control-plane/custom-gateway-api/examples/standard/simple-http-https/gateway.yaml
apiVersion: consul.networking.io/v1beta1
kind: Gateway
metadata:
  name: example-gateway
spec:
  gatewayClassName: prod 
  listeners:
  - name: http
    port: 80
    protocol: HTTP
    hostname: "*.example.com"
  - name: https
    port: 443
    protocol: HTTPS
    hostname: "*.example.com"
    tls:
      mode: Terminate
      certificateRefs:
      - kind: Secret
        name: example-com
