control-plane/custom-gateway-api/examples/standard/simple-http-https/bar-route.yaml
apiVersion: consul.networking.io/v1beta1
kind: HTTPRoute
metadata:
  name: bar 
spec:
  parentRefs:
  - name: example-gateway
    sectionName: https
  hostnames:
  - bar.example.com
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: bar-app 
      port: 80
