control-plane/custom-gateway-api/examples/standard/simple-http-https/foo-route.yaml
apiVersion: consul.networking.io/v1beta1
kind: HTTPRoute
metadata:
  name: foo 
spec:
  parentRefs:
  - name: example-gateway
    sectionName: https
  hostnames:
  - foo.example.com
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: foo-app 
      port: 80
  - matches:
    - path:
        type: PathPrefix
        value: /orders
    backendRefs:
    - name: foo-orders-app 
      port: 80
