control-plane/custom-gateway-api/examples/standard/simple-http-https/tls-redirect-route.yaml
apiVersion: consul.networking.io/v1beta1
kind: HTTPRoute
metadata:
  name: tls-redirect
spec:
  parentRefs:
  - name: example-gateway
    sectionName: http
  hostnames:
  - foo.example.com
  - bar.example.com
  rules:
  - filters:
    - type: RequestRedirect
      requestRedirect:
        scheme: https
        port: 443
